css/about.css
section{
    min-height: 100vh;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.about-container{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    width: 90%;
    max-width: 1000px;
    z-index: 0;
}
.left-image{
    width: 50%;
    height: 600px;
    background: url('../images/pp9.jpeg');
    border-radius: 8px;
}
.right-text{
    width: 50%;
    min-height: 420px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding:30px;
    background: pink;
    border-radius: 8px;
    text-align: center;
    margin-left: -100px;
}
.right-text p{
    font-size: 17px;
}
@media all and (max-width: 768px){
     .about-container{
         flex-direction: column;
         width: 100%;
         margin: 0 20px;
     }
     .left-image{
         width: 100%;
     }
     .right-text{
         width: 80%;
         margin: 0;
         margin-top: -150px;
     }
}

/* packages styling */
.packages-container{
    width: 100%;
    padding: 30px;
}
.grid{
    margin: 80px;
    margin: 10px auto 10px;
    align-items: center;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-gap: 30px;
    text-align: center;
}
.grid img{
    width: 90%;
    border-radius: 10px;
}
article .text{
    font-size: 17px;
    padding: 10px;
}
article .text h3{
    padding: 10px;
}
article p{
    padding: 10px ;
}

/* booking styling */
.booking-container{
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 250px auto;
   width: 90%;
   max-width: 1000px;
   z-index: 0;
}
.left-booking-text{
    width: 50%;
    text-align: center;
    background: pink;
    min-height: 600px;
    margin-right: 30px;
}
.right-booking-image{
    width: 50%;
    min-height: 600px;
    background-image: url('../images/pp11.jpeg');
}
@media all and (max-width: 768px){
    .booking-container{
        flex-direction: column;
    }
    .left-booking-text{
        width: 100%;
        margin: 0;
    }
    .right-booking-image{
        width: 100%;
        margin-top: 30px;
    }
}

